--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,27 @@
- }
- body{ color: 212121;}
- . logo{
-     text-emphasis: none;
-    }
- logo { 
-     font-family: Raleway,sans-serif;
+body{
+    font-family: "Roboto", sans-serif;
+    background-color: #ffffff;
+    color: rgba, 117, 117, 117,1 ;
+     }
+ul{
+    list-style: none;
+}
+/* Логотип*/
+ .logo{
+     text-decoration: none;
+    font-family: Raleway,sans-serif;
 font-style: normal;
-font-weight: bold;
+font-weight: 700;
 font-size: 26px;
-line-height: 1.19px;
-color: black;
+line-height: 1.17px;
+color: 000000; 
+    }
+ .logo-accen{ 
+    color: var(#2196F3);
  }
- .logo-accent{
-     color: var(background: #212121;);
- }
- .logo-white{
-     column-gap:#ffffff ;
- }
-
+.logo-logocc{
+    color: #ffffff;
+}
 
 
 
